--- a/_server/registration/templates/registration/base.html
+++ b/_server/registration/templates/registration/base.html
@@ -1,17 +1,106 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    /* style your login pages here because the normal
-      static asset flow is different now */
-  </style>
-</head>
-<body>
-  {% block content %}
-  {% endblock %}
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      :root {
+        --primary: #8d99ae;
+        --secondary: #92b3c0;
+        --tertiary: #96ccd2;
+        --accent: #f26419;
+        font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+        background-color: #242424;
+        font-synthesis: none;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        -webkit-text-size-adjust: 100%;
+      }
+      html {
+        background-color: #242424;
+      }
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        height: 100vh;
+        padding-top: 100px;
+      }
+
+      button {
+        background-color: var(--secondary);
+        height: 3rem;
+        padding: 0 .75rem;
+        border: none;
+        border-radius: 8px;
+        font-size: 1.25rem;
+        line-height: 1.75rem;
+      }
+      
+
+      .input-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding-bottom: 2rem;
+      }
+
+      .input {
+        background-color: var(--primary);
+        padding: 4px 4px 4px 8px;
+        border: none;
+        border-radius: 0.75rem;
+        width: 50vw;
+        font-size: 18px;
+      }
+
+      .label {
+        font-size: 1.5rem;
+        line-height: 1.75rem;
+        color: white;
+        padding-bottom: 4px;
+      }
+
+      .headings{
+        text-align: center;
+        color: white;
+        padding-bottom: 75px;
+      }
+
+      h1{
+        font-weight: 400;
+      }
+
+      h2{
+        font-weight: 300;
+      }
+
+      #create-account{
+        margin-top: 50px;
+        padding: 0 .75rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        color: black;
+        height: 3rem;
+        background-color: var(--tertiary);
+        border-radius: 8px;
+        font-size: 1.25rem;
+        line-height: 1.75rem;
+      }
+
+      #ca-heading{
+        padding-top: 100px;
+      }
+    </style>
+  </head>
+  <body>
+    {% block content %} {% endblock %}
+  </body>
 </html>
