fixed styling on registration pages

--- a/_server/registration/templates/registration/sign_in.html
+++ b/_server/registration/templates/registration/sign_in.html
@@ -13,7 +13,7 @@
     <label class="label"> Password </label>
     <input class="input" type="password" name="password" />
   </div>
-  <button>Sign In</button>
+  <button class="button">Sign In</button>
 </form>
-<a id="create-account" href="/registration/sign_up/">Create New Account</a>
+<a class="button" id="create-account" href="/registration/sign_up/">Create New Account</a>
 {% endblock %}
