--- a/_server/registration/templates/registration/sign_up.html
+++ b/_server/registration/templates/registration/sign_up.html
@@ -22,6 +22,6 @@
     <label class="label"> Password </label>
     <input class="input" type="password" name="password" />
   </div>
-  <button>Create Account</button>
+  <button class="button">Create Account</button>
 </form>
 {% endblock %}
