--- a/_server/registration/templates/registration/base.html
+++ b/_server/registration/templates/registration/base.html
@@ -7,12 +7,13 @@
     <title>Document</title>
     <style>
       :root {
-        --primary: #8d99ae;
-        --secondary: #92b3c0;
-        --tertiary: #96ccd2;
+        --primary: #214334;
+        --secondary: #3e7a56;
+        --tertiary: #0081a7;
         --accent: #f26419;
+        --text: #3a2e39;
         font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-        background-color: #242424;
+        background-color: #d3d3d3;
         font-synthesis: none;
         text-rendering: optimizeLegibility;
         -webkit-font-smoothing: antialiased;
@@ -31,16 +32,32 @@
         padding-top: 100px;
       }
 
-      button {
+      .button {
         background-color: var(--secondary);
         height: 3rem;
-        padding: 0 .75rem;
+        padding: 0 0.75rem;
         border: none;
-        border-radius: 8px;
+        border-radius: 16px;
         font-size: 1.25rem;
         line-height: 1.75rem;
+        color: white;
+        transition: all ease-in 200ms;
       }
       
+      .button:hover{
+        background-color: var(--tertiary);
+      }
+
+      #create-account {
+        margin-top: 50px;
+        padding: 0 0.75rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        height: 3rem;
+      
+      }
 
       .input-container {
         display: flex;
@@ -51,7 +68,7 @@
       }
 
       .input {
-        background-color: var(--primary);
+        background-color: white;
         padding: 4px 4px 4px 8px;
         border: none;
         border-radius: 0.75rem;
@@ -62,40 +79,29 @@
       .label {
         font-size: 1.5rem;
         line-height: 1.75rem;
-        color: white;
+        color: var(--text);
         padding-bottom: 4px;
       }
 
-      .headings{
+      .headings {
         text-align: center;
         color: white;
         padding-bottom: 75px;
       }
 
-      h1{
+      h1 {
         font-weight: 400;
+        color: var(--text);
       }
 
-      h2{
+      h2 {
         font-weight: 300;
+        color: var(--text);
       }
 
-      #create-account{
-        margin-top: 50px;
-        padding: 0 .75rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-decoration: none;
-        color: black;
-        height: 3rem;
-        background-color: var(--tertiary);
-        border-radius: 8px;
-        font-size: 1.25rem;
-        line-height: 1.75rem;
-      }
+      
 
-      #ca-heading{
+      #ca-heading {
         padding-top: 100px;
       }
     </style>
